--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background: #eae2b7;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*desktop media query only seems to work here in index.css*/
+@media only screen and (min-width:1200px) {
+  .info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .left,
+  .right {
+    width: 50%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .right {
+    padding-top: 75px;
+  }
+};
